--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js"></script>
     <script src="js/script.js"></script>
     <title>BlueSky</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <main id="app">
@@ -78,7 +80,7 @@
         </div>
 
         <div class="sectionweather">
-            Hier kommt der ChartJS Graph hin.
+            <canvas id="myChart"></canvas>
         </div>
     </div>
 
