Added Temp and Hum Timeline, fixed bugs

--- a/index.html
+++ b/index.html
@@ -75,13 +75,31 @@
             </div>
         </div>
 
-        <div id="divsepline">
+        <div class="divsepline">
             <img src="BlueSkyIcons/Line.png" id="sepline">
         </div>
 
         <div class="sectionweather">
-            <canvas id="myChart"></canvas>
+            <canvas id="weatherChart"></canvas>
         </div>
+    </div>
+
+    <div class="sectioncharts">
+        <div class="temptimeline">
+            <canvas id="tempChart"></canvas>
+        </div>
+
+        <div class="divsepline">
+            <img src="BlueSkyIcons/Line.png" id="sepline">
+        </div>
+
+        <div class="humtimeline">
+            <canvas id="humChart"></canvas>
+        </div>
+    </div>
+
+    <div class="map">
+        
     </div>
 
 </main>
