Added Map using geoloc

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+          integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+          crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
+            integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
+            crossorigin=""></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js"></script>
     <script src="js/script.js"></script>
     <title>BlueSky</title>
@@ -99,9 +105,14 @@
     </div>
 
     <div class="map">
-        
+        <div id="mapid"></div>
     </div>
 
 </main>
+<footer>Created By Florian Wieland - <a href="https://darksky.net/poweredby/">Powered by Dark Sky</a></footer>
+
 </body>
+
+
+
 </html>
