Minor QOL changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="cityname"></div>
         </div>
         <div id="mainicon">
-            <img src="BlueSkyIcons/clear-night.png" id='dayicon'>
+            <img src="" id='dayicon'>
         </div>
         <div id="maininfo">
             <div id="overview-feel" class='overview'></div>
@@ -114,7 +114,7 @@
 
     <div class="divsearch">
         <form onkeypress="return event.keyCode != 13">
-            <input type="text" id="searchcityname" placeholder="Test">
+            <input type="text" id="searchcityname" placeholder="No Access to your location. Please specify a city name">
             <input type="button" value="Search City" onclick="searchForCity()">
         </form>
     </div>
