Added Night Mode, minor design changes

--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
     <div class="divsearch">
         <form onkeypress="return event.keyCode != 13">
             <input type="text" id="searchcityname" placeholder="No Access to your location. Please specify a city name">
-            <input type="button" value="Search City" onclick="searchForCity()">
+            <button type="button" onclick="searchForCity()">Search City</button>
         </form>
     </div>
+
 </main>
 <footer>Created By Florian Wieland - <a href="https://darksky.net/poweredby/">Powered by Dark Sky</a></footer>
 
