--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="cityname"></div>
         </div>
         <div id="mainicon">
-            <img src="" id='dayicon'>
+            <img src="" id='dayicon' alt="Icon for current codition">
         </div>
         <div id="maininfo">
             <div id="overview-feel" class='overview'></div>
@@ -44,42 +44,42 @@
     <div class="sectionweek-weather">
         <div class="sectionweek">
             <div class="sectionweeksection">
-                <div><img src="" id="shorticons-1" class="shorticons"></div>
+                <div><img src="" id="shorticons-1" class="shorticons" alt="Icon for day 1"></div>
                 <div id="weekname-1" class="weekname"></div>
                 <div id="weektexts-1" class="weektexts"></div>
                 <div id="weektemps-1" class="weektemps"></div>
             </div>
 
             <div class="sectionweeksection">
-                <div><img src="" id="shorticons-2" class="shorticons"></div>
+                <div><img src="" id="shorticons-2" class="shorticons" alt="Icon for day 2"></div>
                 <div id="weekname-2" class="weekname"></div>
                 <div id="weektexts-2" class="weektexts"></div>
                 <div id="weektemps-2" class="weektemps"></div>
             </div>
 
             <div class="sectionweeksection">
-                <div><img src="" id="shorticons-3" class="shorticons"></div>
+                <div><img src="" id="shorticons-3" class="shorticons" alt="Icon for day 3"></div>
                 <div id="weekname-3" class="weekname"></div>
                 <div id="weektexts-3" class="weektexts"></div>
                 <div id="weektemps-3" class="weektemps"></div>
             </div>
 
             <div class="sectionweeksection">
-                <div><img src="" id="shorticons-4" class="shorticons"></div>
+                <div><img src="" id="shorticons-4" class="shorticons" alt="Icon for day 4"></div>
                 <div id="weekname-4" class="weekname"></div>
                 <div id="weektexts-4" class="weektexts"></div>
                 <div id="weektemps-4" class="weektemps"></div>
             </div>
 
             <div class="sectionweeksection">
-                <div><img src="" id="shorticons-5" class="shorticons"></div>
+                <div><img src="" id="shorticons-5" class="shorticons" alt="Icon for day 5"></div>
                 <div id="weekname-5" class="weekname"></div>
                 <div id="weektexts-5" class="weektexts"></div>
                 <div id="weektemps-5" class="weektemps"></div>
             </div>
 
             <div class="sectionweeksection">
-                <div><img src="" id="shorticons-6" class="shorticons"></div>
+                <div><img src="" id="shorticons-6" class="shorticons" alt="Icon for day 6"></div>
                 <div id="weekname-6" class="weekname"></div>
                 <div id="weektexts-6" class="weektexts"></div>
                 <div id="weektemps-6" class="weektemps"></div>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="divsepline">
-            <img src="BlueSkyIcons/Line.png" class="sepline">
+            <img src="BlueSkyIcons/Line.png" class="sepline" alt="Seperation line">
         </div>
 
         <div class="sectionweather">
@@ -101,7 +101,7 @@
         </div>
 
         <div class="divsepline">
-            <img src="BlueSkyIcons/Line.png" class="sepline">
+            <img src="BlueSkyIcons/Line.png" class="sepline" alt="Seperation line">
         </div>
 
         <div class="humtimeline">
