Implemented Smart Wear

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
 
     <div id='summary'></div>
 
+    <div id="wearables">
+        <div class="weardiv"><img src="" id="jeans" class="wear"></div>
+        <div class="weardiv"><img src="" id="shirt" class="wear"></div>
+        <div class="weardiv"><img src="" id="jacket" class="wear"></div>
+        <div class="weardiv"><img src="" id="umbrella" class="wear"></div>
+        <div class="weardiv"><img src="" id="scarf" class="wear"></div>
+    </div>
+
     <div class="sectionweek-weather">
         <div class="sectionweek">
             <div class="sectionweeksection">
