--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
     </div>
 
 </main>
-<footer>Created By Nina Fritz & Florian Wieland - <a href="https://darksky.net/poweredby/">Powered by Dark Sky</a></footer>
+<footer>Created By Florian Wieland - <a href="https://darksky.net/poweredby/">Powered by Dark Sky</a></footer>
 
 <!--Load at last, so that the container for the Map is surely loaded already-->
 <script type="text/javascript" src="js/script.js"></script>
